2004-10-23  Matti Aarnio  <mea@zmailer.org>

	* router/router.c, router/daemonsub.c, scheduler/scheduler.c:
	    Having hard time at profiling router .. must reset
	    the profiling timer after forks.  Attempting to make
	    the additional code profiling agnostic.  It will work,
	    if environemnt initialized profiling, otherwise it won't
	    do a thing...

	* router/router.c:
	    Unnecessarily open file found in router, too..

	* scheduler/scheduler.c:
	    Hunting unnecessarily open file-descriptors in scheduler,
	    and its TimeServer subprocess.

	* lib/zshmmibattach.c:
	    Don't keep around the file descriptor associated with
	    the opened memory segment.  It isn't needed, and uses up
	    some resource space in the system, anyway.

	* router/prototypes.h, router/rfc822.c, router/rtsyslog.c:
	    Track and report process RUSAGE (user and system CPU times)
	    if support for that is available.  Can be used to understand
	    system load developments.

	* transports/libta/mimeheaders.c:
	    Sometimes malformed messages undergoing format conversion
	    did cause smtp to drop core.  Turned out to be a mistaken
	    inclusion of the ASCII NUL into scan comparison range of
	    a string scanning.

	* smtpserver/subdaemon-rtr.c, smtpserver/subdaemon-ctf.c:
	    Made slight text changes to help on scanning the log
	    for appearance of internal "<subsys> DELAY %d SECONDS"
	    notes.

	* utils/policy-builder.sh.in:
	    Added a small sed-spell to remove input text line ends
	    since first '#' character in a line.  This allows now
	    adding comments on input line after initial data with
	    that '#' character:
	        example.com   # Added on 2004-Oct-23

2004-10-20  Matti Aarnio  <mea@zmailer.org>

	* transports/errormail/errormail.c, transports/expirer/expirer.c,
	  transports/hold/hold.c, transports/mailbox/mailbox.c,
	  transports/reroute/reroute.c, transports/sm/sm.c,
	  transports/smtp/smtp.c, utils/vacation/vacation.c: